attempt to fix coloring on home button on mobile

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -46,6 +46,7 @@
     .create-bracket-btn {
       font-size: 18px;
       padding: 12px 24px;
+      color: white;
     }
   }
   
